Fix issue with layer dimensions not showing

--- a/nn-comparison-frontend/src/app/components/layers/general-layer/general-layer.component.css
+++ b/nn-comparison-frontend/src/app/components/layers/general-layer/general-layer.component.css
@@ -7,7 +7,6 @@
 }
 
 .svg-container {
-  border-right: grey solid 1px;
   display: inline-block;
   text-align: center;
 }
